<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrderPlatform</string>
    <string name="hello_world">Hello world!</string>
	<string name="title_bar_slide">共合设</string>
	<string name="search_hint">木材家具/石材/沙发/灯具/地板</string>
	<string name="all">全部</string>
	<string name="construction_class">结构类</string>
	<string name="electromechanical_class">机电类</string>
	<string name="wash_class">卫浴类</string>
	<string name="wooden_class">成品木作</string>
	<string name="face_class">面材类</string>
	<string name="light_class">照明材料</string>
	<string name="decorate_class">陈设材料</string>
	<string name="user_register">用户注册</string>
	<string name="user_name">用户名</string>
	<string name="password">密码</string>
	<string name="phone_number">联系电话</string>
	<string name="company_belong">所属公司</string>
	<string name="my_zone">我的空间</string>
	<string name="my_collect">我的收藏</string>
	<string name="my_order">我的订单</string>
	<string name="change_password">修改密码</string>
	<string name="change_image">修改头像</string>
	<string name="myproject">我的项目</string>
	<string name="addproject">添加项目</string>
	<string name="myproject_detail">我的项目详情</string>
	<string name="project_charge">负责人</string>
	<string name="project_charge_tel">负责人电话</string>
	<string name="project_client_name">客户姓名</string>
	<string name="project_client_tel">客户电话</string>
	<string name="project_name">项目名称</string>
	<string name="project_addr">项目地址</string>
	<string name="project_begin_time">开始时间</string>
	<string name="project_end_time">结束时间</string>
	<string name="project_status">项目状态</string>
	<string name="project_descripte">项目描述</string>
	<string name="project_choose_date">请选择日期</string>
	<string name="project_going">正在进行中</string>
	<string name="project_save">保存</string>
	<string name="copyright">版权声明</string>
	<string name="copyright_title">版权</string>
	<string name="muzuo">木作</string>
	<string name="mianliao">面料</string>
	<string name="weiyu">卫浴</string>
	<string name="chenshe">陈设</string>
	<string name="more">更多</string>
	<string name="furniture">家具</string>
	<string name="light_tool">灯具</string>
	<string name="custom_made">定制</string>
	<string name="building_material">建材</string>
	<string name="brand_class">品牌</string>
	<string name="sale_product">促销产品</string>
	<string name="hot_product">热卖产品</string>
	<string name="class_search">类别搜索</string>
	<string name="address_hz">杭州</string>
	<string name="price">价格</string>
	<string name="sentiment">人气</string>
	<string name="sale_volume">销量</string>
	<string name="land_construct">土地建造</string>
	<string name="sun_room">阳光房</string>
	<string name="garden_view">园林/景观</string>
	<string name="plastics_door_window">塑钢门窗</string>
	
	<string name="center_aircondition">中央空调</string>
	<string name="ground_warm">地暖系统</string>
	<string name="water_purification">净水系统</string>
	<string name="center_dust">中央吸尘</string>
	<string name="fresh_wind">新风系统</string>
	<string name="security">安防系统</string>
	<string name="lamp_system">照明系统</string>
	<string name="media_system">影音系统</string>
	<string name="smart_system">智能系统</string>
	<string name="curtain_electron">电动窗帘</string>
	<string name="lift">电梯</string>
	<string name="swimming_devices">游泳设备</string>
	
	<string name="pedestal_toilet">坐厕</string>
	<string name="face_pot">脸盆</string>
	<string name="bathtab">浴缸</string>
	<string name="sprinkler">龙头/花洒</string>
	<string name="floor_drain">地漏/去水</string>
	<string name="hanging_drop">五金挂饰</string>
	<string name="all_shower_room">整体淋浴房</string>
	
	<string name="whole_broad">整体橱柜</string>
	<string name="indoor_system">内门系统</string>
	<string name="broad_system">墙板系统</string>
	<string name="cloth_hat_cupbroad">衣帽柜体</string>
	<string name="wash_cupbroad">浴室柜体</string>
	<string name="stair_rail">楼梯/护栏</string>
	<string name="floor">地板</string>
	
	<string name="stone">石材</string>
	<string name="tile">瓷砖</string>
	<string name="wallpaper">墙纸</string>
	<string name="hard_soft_package">软硬包</string>
	<string name="paint">涂料/藻泥</string>
	<string name="gyp_line">石膏线条</string>
	<string name="glasses">镜面/玻璃</string>
	<string name="special_material">特殊材料</string>
	
	<string name="flush_light_panel">筒灯</string>
	<string name="spot_light">射灯</string>
	<string name="light_emitting_lamp">发光灯管</string>
	<string name="floor_lamp">地灯</string>
	<string name="switch_board">开关面板</string>
	
	<string name="lamp">灯具</string>
	<string name="decoration">饰品</string>
	<string name="carpet">地毯</string>
	<string name="curtain_art">窗帘布艺</string>
	<string name="decoration_picture">装饰画</string>
	<string name="all_cate">全部分类</string>
	<string name="cate">分类</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
	<string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="finished">已完成</string>
    <string name="going">正在进行</string>
    <string name="reserve_time">预定时间:</string>
    <string name="books_finished_time">订单完成时间:</string>
    <string name="modify_passwd">修改密码</string>
    <string name="enter_passwd_original">请输入原始密码</string>
    <string name="enter_passwd_new">请输入新密码</string>
    <string name="enter_passwd_new_again">请再次输入新密码</string>
	<string name="test">亲，您还未添加项目！ </string>
	<string name="exit_curUser">退出当前账号</string>
	
	<string name="state_book">订单状态: </string>
	<string name="apply_drawback">申请退款</string>
	<string name="confirm_accept">确认收货</string>
	<string name="预定时间:"></string>
	
	<string name="loading">正在加载</string>
    <string name="loading_fail">加载失败</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="open_picture">打开图库</string>
    <string name="open_camera">打开摄像头</string>
    
    <string name="forgetPw">忘记密码</string>
    <string name="username_is_null">用户名为空</string>
	<string name="telphone_number_is_null">手机号不能为空</string>
	<string name="no_the_right_tel_number">手机号不完整</string>
	<string name="password_is_null">密码为空</string>
	<string name="company_name_is_null">公司名字不能为空</string>
	<string name="register_success">注册成功!</string>
	<string name="register_fail">注册失败!</string>
	<string name="server_error">服务器出现错误，请稍后再试</string>
	<string name="no_more_data_loaded">没有更多数据</string>
	<string name="collect">收藏</string>
	<string name="price_retail">零售价</string>
	<string name="price_mark">市场价</string>
	<string name="product_parameter">产品参数</string>
	<string name="type">类别</string>
	<string name="describe_en">英文描述</string>
	<string name="brand">品牌</string>
	<string name="unit">单位</string>
	<string name="size">规格型号</string>
	<string name="store">库存</string>
	<string name="style">风格</string>
	<string name="sell_days">供货天数</string>
	
	<string name="contact">联系人</string>
	<string name="telphone">电话</string>
	<string name="belong_project">所属项目</string>
	<string name="pick_belong_project">请选择项目</string>
	<string name="book_count">预定数量</string>
	<string name="retail_all_price">零售总价</string>
	<string name="remarks">备注</string>
	<string name="book_now">立即预定</string>
	<string name="uploading">正在提交</string>
	<string name="fail_to_book">预定失败</string>
	<string name="success_to_book">预定成功</string>
	<string name="no_data">该目录暂时没有数据</string>
	<string name="brand_detail">品牌详情</string>
	<string name="click_again_exit">再点击一次退出</string>
	<string name="load_finish">加载完成</string>
	<string name="login_success">登录成功</string>
	<string name="login_fail">登录失败</string>
	<string name="search_should_not_null">搜索内容不能为空</string>
	<string name="project_belong_cannot_null">所属项目不能为空</string>
	
</resources>
