<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@color/grey_main"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/color_trans_lightgrey"
        android:text="@string/open_picture" />
    
     <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/color_trans_lightgrey"
        android:text="@string/open_camera" />
     
     <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/color_trans_lightgrey"
        android:text="@string/cancel" />

</LinearLayout>